# Boids

./: Boid.frag  MyApp.cpp  MyApp.cu  MyApp.h  README.md  main.cpp  meson.build
includes/: Camera.h  GLUtils.hpp  ProgramBuilder.cpp  SDL_GLDebugMessageCallback.h
src/: Boid.vert  Cube.vert  MyApp.cpp  MyApp.cu  MyApp.h  Sphere.vert  main.cpp
src/includes/: CameraManipulator.cpp  CameraManipulator.h  GLUtils.cpp  ParametricSurfaceMesh.hpp  ProgramBuilder.h  SDL_GLDebugMessageCallback.cpp
